--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,9 @@ section{
 }
 
 /** colors: **/
+.navbar-shadow{
+  box-shadow: 0px 3px 15px 2px rgba(96, 105, 87, 0.36);
+}
 .hero{
   background-color:#7CB342;
 }
@@ -77,6 +80,7 @@ section{
   background-color:#FF6D00;
 }
 
+
 /**hero section **/
 .intro-title{
   font-size: 2em;
@@ -89,8 +93,6 @@ section{
 
 .custom-btn-primary{
   color: #fff;
-  /*box-shadow: 0px 1px 0px #FF8A33 inset, 0px -1px 0px #FA6700 inset, 0px 0px 5px rgba(0, 0, 0, 0.5);
-  */
   text-shadow: 0.5px 0.5px rgba(255, 145, 0, 0.59);
   font-weight: bold;
   text-transform: uppercase;
@@ -98,6 +100,7 @@ section{
   padding: 15px 10px;
   margin-top:40px;
   font-size: 1em;
+  background-color:#FF9100;
 }
 a:hover{
     transform: translateY(1px);
@@ -106,13 +109,13 @@ a:hover{
 .custom-btn-primary:focus,
 .custom-btn-primary:visited, .custom-btn-primary:hover{
   border: 1px solid #FF6D00;
-  background-color:#FF9100;
+  background-color:#FF6D00;
   outline: none !important;
   box-shadow: none;
   -webkit-box-shadow: none;
-
   transform: translateY(2px);
 }
+
 .typed-cursor{
   opacity: 1;
   -webkit-animation: blink 0.7s infinite;
@@ -128,19 +131,23 @@ a:hover{
 .card {
   color:black;
   border: 0px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  transition: box-shadow 0.5s;
 }
-
+.card:hover{
+  box-shadow: 0px 0px 14px 3px rgba(96, 105, 87, 0.36);
+}
 .card-tags{
   color: #808080;
   letter-spacing: 0.1em;
 }
+.card-links{
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  text-align: right!important;
+}
 /** Contacts **/
 .social{
   font-family:monospace;
-  background-color:#EEEEEE;
-  color:black;
-  padding-left:5px;
-
 }
 .social-item{
   list-style: none;
@@ -153,33 +160,59 @@ a:hover{
 .social > p{
 }
 
-.contacts-input-text{
-      background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-      border: 0;
-      border-bottom: 1px solid #000;
-      color: #fff;
-      border-radius:0px;
-}
-.contacts-input-text:focus{
+
+.contacts-input{
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
   border: 0;
-  border-bottom: 1px solid #000;
-  border-radius:0px;
   color: #fff;
+  border-radius:0px;
 }
-.contacts-input-text::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #EEEEEE;
+.contacts-input:focus{
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: 0;
+  color: #fff;
+  border-radius:0px;
 }
-.contacts-input-text::-moz-placeholder { /* Firefox 19+ */
-  color: #EEEEEE;
+.contacts-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #ababab;
 }
-.contacts-input-text:-ms-input-placeholder { /* IE 10+ */
-  color: #EEEEEE;
+.contacts-input::-moz-placeholder { /* Firefox 19+ */
+  color: #ababab;
 }
-.contacts-input-text:-moz-placeholder { /* Firefox 18- */
-  color: #EEEEEE;
+.contacts-input:-ms-input-placeholder { /* IE 10+ */
+  color: #ababab;
+}
+.contacts-input:-moz-placeholder { /* Firefox 18- */
+  color: #ababab;
 }
 
+.contacts-input-text{
+    border-bottom: 1px solid #FFF;
+}
+.contacts-input-text:focus{
+  border-bottom: 1px solid #FF6D00;
+}
+
+.contacts-textarea{
+  padding:5px;
+  border: 1px solid #FFF;
+}
+.contacts-textarea:focus{
+  border: 1px solid #FF6D00;
+}
+.contacts-send{
+  border: 1px solid #FF6D00;
+  background-color:#FF9100;
+}
+.contacts-send:active,
+.contacts-send:focus,
+.contacts-send:visited, .contacts-send:hover{
+  border: 1px solid #FF6D00;
+  background-color: #FF6D00;
+  outline: none !important;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
 
 /** Footer **/
 
@@ -213,7 +246,6 @@ a:hover{
     }
     .custom-btn-primary{
       font-size: 1em;
-      background-color:transparent;
     }
 }
 
