--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
 
 
 html,body{height:100%;}
+.navbar{
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
 
 body {
     padding-top:3em;
