--- a/css/style.css
+++ b/css/style.css
@@ -150,11 +150,11 @@ a:hover{
 .card {
   color:black;
   border: 0px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  box-shadow: 6px 5px 10px 3px rgba(0,0,0,.14);
   transition: box-shadow 0.5s;
 }
 .card:hover{
-  box-shadow: 0px 0px 14px 3px rgba(96, 105, 87, 0.36);
+  box-shadow: 9px 9px 18px 10px rgba(0,0,0,.14);
 }
 .card-tags{
   color: #808080;
@@ -255,14 +255,19 @@ a:hover{
   .intro-title{
       font-size: 2.5em;
   }
-
+  section{
+    padding: 8rem 1.5rem;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .intro-title{
-      font-size: 3.5em;
+      font-size: 4.5em;
     }
+  .whoami{
+      font-size: 1.5em;
+  }
     .custom-btn-primary{
       font-size: 1em;
     }
