--- a/css/style.css
+++ b/css/style.css
@@ -275,4 +275,7 @@ a:hover{
 
 /* Extra large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) {
+    #hero{
+        margin-top:2rem;
+    }
 }
