--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html,body{height:100%;}
 }
 
 body {
-    padding-top:3em;
+    padding-top:20px;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     line-height: 24px;
