--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ a:hover{
 }
 .contacts-input-text:focus{
   border-bottom: 1px solid #FF6D00;
+  box-shadow: 0 0 0 0;
 }
 
 .contacts-textarea{
@@ -218,6 +219,7 @@ a:hover{
 }
 .contacts-textarea:focus{
   border: 1px solid #FF6D00;
+  box-shadow: 0 0 0 0.2rem #ff70042e;
 }
 .contacts-send{
   border: 1px solid #FF6D00;
